# Innodogs_robot_communication

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/robot_communication/: connection_to_robot.hpp
robot_communication/config/: config.yaml
robot_communication/include/robot_communication/: connection_to_robot.hpp
robot_communication/launch/: launch.launch
robot_communication/src/: connection_to_robot.cpp  robot_communication.cpp
src/: connection_to_robot.cpp  robot_communication.cpp
